--- a/.github/workflows/Deploy to Prod.yml
+++ b/.github/workflows/Deploy to Prod.yml
@@ -61,17 +61,15 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID_PROD }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: '${{ secrets.CONNECT_TO_PROD }}'
           enable-AzPSSession: true
           
 
       - name: data-factory-deploy
         uses: Azure/data-factory-deploy-action@v1.2.0
         with:
-          resourceGroupName: rg_ci_cd_prod_rg  # (6) your target ADF resource group name
-          dataFactoryName: adf-prod-lb    # (7) your target ADF name
+          resourceGroupName: rg_ci_cd_new_prod  # (6) your target ADF resource group name
+          dataFactoryName: df-new-prod    # (7) your target ADF name
           armTemplateFile: ARMTemplateForFactory.json   # (8) ARM template file name ARMTemplateForFactory.json
           armTemplateParametersFile: ARMTemplateParametersForFactory.json    # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
           additionalParameters: # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
