--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -43,7 +43,8 @@ jobs:
 
     - name: Create Custom ARM Parameters File for DEV
       run: |
-        echo '{
+        cat <<-EOF > ARMTemplateParametersForFactory.json
+        {
           "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
           "contentVersion": "1.0.0.0",
           "parameters": {
@@ -53,7 +54,8 @@ jobs:
             "ls_storage_dev_properties_typeProperties_url": {"value": "https://storageldev.dfs.core.windows.net"},
             "ls_storage_dev_properties_typeProperties_accountKey_secretName": {"value": "secret-storage-dev"}
           }
-        }' > ARMTemplateParametersForFactory.json
+        }
+        EOF
       working-directory: ${{github.workspace}}/ADFroot/build/ExportedArmTemplate
 
 
@@ -80,7 +82,8 @@ jobs:
 
     - name: Create Custom ARM Parameters File for UAT
       run: |
-        echo '{
+        cat <<-EOF > ARMTemplateParametersForFactory.json
+        {
           "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentParameters.json#",
           "contentVersion": "1.0.0.0",
           "parameters": {
@@ -90,7 +93,8 @@ jobs:
             "ls_storage_dev_properties_typeProperties_url": {"value": "https://storageluat.dfs.core.windows.net"},
             "ls_storage_dev_properties_typeProperties_accountKey_secretName": {"value": "secret-storage-uat"}
           }
-        }' > ARMTemplateParametersForFactory.json
+        }
+        EOF
       working-directory: ${{github.workspace}}/ADFroot/build/ExportedArmTemplate
 
 
@@ -111,7 +115,5 @@ jobs:
           armTemplateFile: ARMTemplateForFactory.json   # (8) ARM template file name ARMTemplateForFactory.json
           armTemplateParametersFile: ARMTemplateParametersForFactory.json    # (9) ARM template parameters file name ARMTemplateParametersForFactory.json
           # additionalParameters: factoryName=df-new-uat ls_db_dev_properties_typeProperties_connectionString_secretName=secret-db-uat ls_kv_dev_properties_typeProperties_baseUrl=https://kv-l-uat.vault.azure.net/ ls_storage_dev_properties_typeProperties_url=https://storageluat.dfs.core.windows.net
-          
           # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
-         
           # skipAzModuleInstallation:  # Parameters which skip the Az module installation. Optional, default is false.
