Update Deploy to UAT.yml

--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -44,16 +44,16 @@ jobs:
     # Add a step to modify ARMTemplateForFactory.json
     - name: Update ARM Template
       run: |
-        jq '.typeProperties.connectionString += {"type": "AzureKeyVaultSecret", "store": {"referenceName": "kv-l-dev", "type": "LinkedServiceReference"}, "secretName": "[parameters(''ls_AzureStorage_properties_typeProperties_accountKey_secretName'')]"}' ARMTemplateForFactory.json > temp.json
-        mv temp.json ARMTemplateForFactory.json
-      working-directory: ${{github.workspace}}/ADFroot/build
+        jq '.typeProperties.connectionString += {"type": "AzureKeyVaultSecret", "store": {"referenceName": "kv-l-dev", "type": "LinkedServiceReference"}, "secretName": "[parameters(''ls_AzureStorage_properties_typeProperties_accountKey_secretName'')]"}' ${{github.workspace}}/ADFroot/build/ExportedArmTemplate/ARMTemplateForFactory.json > temp.json
+        mv temp.json ${{github.workspace}}/ADFroot/build/ExportedArmTemplate/ARMTemplateForFactory.json
+      working-directory: ${{github.workspace}}
 
     # Add a step to modify ARMTemplateParametersForFactory.json
     - name: Update ARM Template Parameters
       run: |
-        jq '.parameters.ls_AzureStorage_properties_typeProperties_accountKey_secretName = {"value": "secret-storage-dev"}' ARMTemplateParametersForFactory.json > temp.json
-        mv temp.json ARMTemplateParametersForFactory.json
-      working-directory: ${{github.workspace}}/ADFroot/build
+        jq '.parameters.ls_AzureStorage_properties_typeProperties_accountKey_secretName = {"value": "secret-storage-dev"}' ${{github.workspace}}/ADFroot/build/ExportedArmTemplate/ARMTemplateParametersForFactory.json > temp.json
+        mv temp.json ${{github.workspace}}/ADFroot/build/ExportedArmTemplate/ARMTemplateParametersForFactory.json
+      working-directory: ${{github.workspace}}
       
       
  
