--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -77,3 +77,8 @@ jobs:
           # (10) Parameters which will be replaced in the ARM template. Expected format 'key1=value key2=value keyN=value'. At the minimum here you should provide the target ADF name parameter. Check the ARMTemplateParametersForFactory.json file for all the parameters that are expected in your scenario
          
           # skipAzModuleInstallation:  # Parameters which skip the Az module installation. Optional, default is false.
+
+
+      - name: Deactivate triggers in ADF (DEV)
+        run: |
+          az rest --method post --uri "https://management.azure.com/subscriptions/Subscription_Dev/resourceGroups/rg_ci_cd_new_dev/providers/Microsoft.DataFactory/factories/df-new-dev/triggers/disable?api-version=2018-06-01" --header "Authorization: Bearer ${{ secrets.AZURE_TOKEN }}"
