--- a/.github/workflows/Deploy to UAT.yml
+++ b/.github/workflows/Deploy to UAT.yml
@@ -90,7 +90,7 @@ jobs:
             - name: Login to Azure
               uses: azure/login@v1
               with:
-                creds: ${{ secrets.AZURE_CREDENTIALS }}
+                creds: ${{ secrets.CONNECT_TO_DEV }}
       
             - name: Deactivate All Triggers in DEV ADF
               run: |
